sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:13: error: '(' expected but identifier found.
    {if plusPetit(i+1,i)
        ^